@@ -90,6 +90,7 @@ int PyObjCAPI_Register(PyObject* module);
 #include "pyobjc-api.h"
 #include "registry.h"
 #include "corefoundation.h"
+#include "closure_pool.h"
 
 extern PyObject* PyObjCMethodAccessor_New(PyObject* base, int class_method);
 
